@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.authentication.oauth.impl;
 
 import static de.cuioss.tools.string.MoreStrings.emptyToNull;
@@ -409,8 +424,10 @@ public class Oauth2AuthenticationFacadeImpl extends BaseAuthenticationFacade
         var config = configurationProvider.get();
 
         if (MoreStrings.isEmpty(config.getLogoutUri())) {
-            var errMsg = String.format("Portal-160: Missing config for logout URI. Check "
-                    + "the end_session_endpoint property from userinfo endpoint.");
+            var errMsg = """
+                    Portal-160: Missing config for logout URI. Check \
+                    the end_session_endpoint property from userinfo endpoint.\
+                    """.formatted();
             LOGGER.warn(errMsg);
             throw new IllegalStateException(errMsg);
         }
